# Melanoma-Classification

./: .pdm-python  README.md  pyproject.toml  requirements.txt  requrements.txt
src/: app.py  cnn.py  mobilenet.py
