[project]
name = "uap-ML-2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jasmin_umm", email = "jasmin_umm@sumbawabaratkab.go.id"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
